# textile-showcase

./: .browserslistrc  .bundle-history.json  .gitignore  .gitleaks.toml  .performance-baseline-production.json  .performance-baseline.json  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  E2E-TESTING-PR-DRAFT.md  LICENSE  NEXT-SESSION-QUICKSTART.md  NEXT_SESSION_PROMPT.md  PROJECT-STATUS.md  README.md  RESTART-CHECKLIST.md  SECURITY-GUIDE.md  SECURITY.md  SEO-IMPLEMENTATION-REPORT.md  SEO-SEARCH-ENGINE-REGISTRATION-GUIDE.md  SESSION-HANDOFF.md  SESSION-SUMMARY.md  SESSION_HANDOVER.md  analysis_request.md  analyze-bundle.js  bundle-size-report.md  chromewebdata_2025-09-20_08-32-16.report.html  codecov.yml  eslint.config.mjs  jest.config.ts  jest.setup.ts  lighthouse-current-audit.report.html  lighthouse-current-audit.report.json  lighthouse-lcp-optimized-production.json  lighthouse-local-lcp-optimized.json  lighthouse-production-audit.report.json  lighthouserc.advanced.js  lighthouserc.ci.js  lighthouserc.js  (+12 more)
.github/: CODEOWNERS
config/: webpack.optimization.ts
credentials/: encrypted.gpg
docs/: BUILD_ENVIRONMENTS.md  E2E-TESTING-SETUP.md  FD-MANAGEMENT-GUIDE.md  TROUBLESHOOTING.md  emergency-rollback-procedures.md
playwright-report/: index.html
public/: indexnow-idaromme.txt  manifest.json  robots.txt  sw.js
scripts/: bundle-size-check.js  deploy-production.sh  e2e-performance-validation.ts  emergency-credential-rotation.sh  optimize-images.js  performance-baseline.js  performance-monitor.js  performance-regression-check.js  (+5 more)
(+622 files in other folders)
