[project]
name = "textile-showcase"
version = "0.1.0"
description = "Python components for textile showcase"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pyrefly>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
